# xyteee-nexus

./: .gitignore  .replit  BUILD_GUIDE.md  design_guidelines.json  package.json  proxy.js  pyproject.toml  render.yaml  replit.md  start_backend.sh  start_expo_go.sh  start_frontend.sh
.agents/memory/: MEMORY.md  admin-security.md  badge-migration.md  gemini-model-selection.md  proxy-architecture.md  replit-port-routing.md  supabase-migration.md
.emergent/: emergent.yml
backend/: .env.example  circle_schema.sql  migrate.py  requirements.txt  schema.sql  server.py  server.py.backup-push
backend/tests/: test_nexus_api.py
frontend/: app.json  package-lock.json  package.json
frontend/android/app/: build.gradle  google-services.json
frontend/app/: _layout.tsx  _layout.tsx.backup-push  index.tsx  notifications.tsx
frontend/app/(app)/: _layout.tsx  feed.tsx  feed.tsx.before-feed-fix  friends.tsx  nexus.tsx  profile.tsx  search.tsx
frontend/app/(auth)/: appeal.tsx  forgot.tsx  login.tsx  setup-profile.tsx  signup.tsx  welcome.tsx
frontend/app/admin/: _layout.tsx  index.tsx
frontend/app/chat/: [id].tsx
frontend/app/circles/: [id].tsx  create.tsx  index.tsx
frontend/app/settings/: accounts.tsx  blocked.tsx  change-password.tsx  delete-account.tsx  edit-profile.tsx  index.tsx  privacy-policy.tsx  status.tsx
frontend/app/story/: [id].tsx  create.tsx
frontend/app/user/: [id].tsx
frontend/src/api/: client.ts  client.ts.before-timeout-fix
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json
test_reports/pytest/: pytest_results.xml
(+36 files in other folders)
