[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.3",
    "email-validator>=2.3.0",
    "fastapi==0.110.1",
    "httpx>=0.28.1",
    "openai>=2.47.0",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "supabase>=2.31.0",
    "tzdata>=2026.2",
    "uvicorn==0.25.0",
]
